--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -737,9 +737,8 @@ jobs:
 
   SBOM:
     needs: [ setup_variables, build-image ]
-    #runs-on: ${{ needs.setup_variables.outputs.runners }}
-    runs-on: ubuntu-latest
-    #if: ${{ inputs.RunSBOM == true }}
+    runs-on: ${{ needs.setup_variables.outputs.runners }}
+    if: ${{ always() && inputs.RunSBOM == true }}
     steps:
       - name: Generate SBOM on Docker image
         uses: anchore/sbom-action@v0.18.0
