--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -738,7 +738,11 @@ jobs:
   SBOM:
     needs: [ setup_variables, build-image ]
     runs-on: ${{ needs.setup_variables.outputs.runners }}
-    if: ${{ always() && inputs.RunSBOM == true }}
+    if: |
+      always() && 
+      !contains(needs.*.result, 'failure') &&
+      !cancelled() &&
+      inputs.RunSBOM == true 
     steps:
       - name: Generate SBOM on Docker image
         uses: anchore/sbom-action@v0.18.0
