Enable SBOM by default for all CI/CD actions

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -158,7 +158,7 @@ on:
         required: false
       RunSBOM:
         type: boolean
-        default: false
+        default: true
         required: false
     secrets:
       token:
