Corrected secret input

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -775,7 +775,7 @@ jobs:
         uses: alvacoder/defectdojo-upload@v1.1.3
         with:
           defectdojo_url: https://defectdojo.sandbox.easir.com
-          defectdojo_api_key: ${{ secrets.DEFECTOJO_TOKEN }}
+          defectdojo_api_key: ${{ secrets.defectdojo-token }}
           defectdojo_product_type: main-platform
           defectdojo_product: ${{ needs.setup_variables.outputs.app }}
           defectdojo_environment_type: Production
