--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -181,7 +181,7 @@ on:
         required: false
       composer-oauth:
         required: false
-      defectodojo-token:
+      defectdojo-token:
         required: true
   workflow_dispatch:
 
@@ -775,7 +775,7 @@ jobs:
         uses: alvacoder/defectdojo-upload@v1.1.3
         with:
           defectdojo_url: https://defectdojo.sandbox.easir.com
-          defectdojo_api_key: ${{ secrets.defectodojo-token }}
+          defectdojo_api_key: ${{ secrets.defectdojo-token }}
           defectdojo_product_type: main-platform
           defectdojo_product: ${{ needs.setup_variables.outputs.app }}
           defectdojo_environment_type: Production
