--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -744,7 +744,7 @@ jobs:
       always() && 
       !contains(needs.*.result, 'failure') &&
       !cancelled() &&
-      inputs.RunSBOM == true 
+      inputs.RunSBOM == true
     steps:
       - name: Generate SBOM on Docker image
         uses: anchore/sbom-action@v0.18.0
@@ -770,7 +770,8 @@ jobs:
         with:
           name: vulnerabilities.json
           path: ${{ steps.scan_sbom.outputs.json }}
-      - name: Import scan results into defectdojo
+      - name: Import scan results into defectdojo (master only)
+        if: ${{ github.ref == 'refs/heads/master' }}
         id: import-scan-results-into-defectdojo
         uses: alvacoder/defectdojo-upload@v1.1.3
         with:
