Fix for integration project that do not build on PRs

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -744,6 +744,7 @@ jobs:
       always() && 
       !contains(needs.*.result, 'failure') &&
       !cancelled() &&
+      !inputs.SkipImageBuild &&
       inputs.RunSBOM == true
     steps:
       - name: Generate SBOM on Docker image
