--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -57,7 +57,7 @@ on:
       ImagePrefix:
         type: string
         required: false
-        default: "production"
+        default: ""
       UseMakeTargets:
         required: false
         type: string
@@ -207,7 +207,6 @@ jobs:
       GH_TOKEN: ${{ secrets.numa-numa-token }}
       FORCE_PUSH: ${{ contains(github.event.head_commit.message, '/forcepush') }}
       DO_E2E_TESTS: ${{ contains(github.event.head_commit.message, '/e2e') }}
-      IMAGE_PREFIX: ${{ inputs.ImagePrefix }}
     steps:
       - name: pull code
         uses: actions/checkout@v4
@@ -250,12 +249,15 @@ jobs:
         run: |
           timestamp=$(date +%s)
           app=$(echo "$GITHUB_REPOSITORY" | cut -f 2 -d "/")
-          pull_number=$(jq -r .pull_request.number "$GITHUB_EVENT_PATH")
           echo "app=$app" >> "$GITHUB_ENV"
           if [ ${{ steps.environment.outputs.environment }} = "prod" ]; then
-            echo "tag=$IMAGE_PREFIX-$timestamp-$GITHUB_SHA" >> "$GITHUB_ENV"
-            tag=$IMAGE_PREFIX-"$timestamp"-"$GITHUB_SHA"
+            echo "tag=production-$timestamp-$GITHUB_SHA" >> "$GITHUB_ENV"
+            tag=production-"$timestamp"-"$GITHUB_SHA"
+          elif [ ${{ inputs.ImagePrefix }} != "" ]; then
+            echo "tag={{ inputs.ImagePrefix }}-$timestamp-$GITHUB_SHA" >> "$GITHUB_ENV"
+            tag={{ inputs.ImagePrefix }}-"$timestamp"-"$GITHUB_SHA"
           else
+            pull_number=$(jq -r .pull_request.number "$GITHUB_EVENT_PATH")
             echo "tag=pr-$pull_number-"$timestamp"-$GITHUB_SHA" >> "$GITHUB_ENV"
             tag=pr-"$pull_number-"$timestamp"-$GITHUB_SHA"
           fi
