--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -254,8 +254,8 @@ jobs:
             echo "tag=production-$timestamp-$GITHUB_SHA" >> "$GITHUB_ENV"
             tag=production-"$timestamp"-"$GITHUB_SHA"
           elif [ ${{ inputs.ImagePrefix }} != "" ]; then
-            echo "tag={{ inputs.ImagePrefix }}-$timestamp-$GITHUB_SHA" >> "$GITHUB_ENV"
-            tag={{ inputs.ImagePrefix }}-"$timestamp"-"$GITHUB_SHA"
+            echo "tag=${{ inputs.ImagePrefix }}-$timestamp-$GITHUB_SHA" >> "$GITHUB_ENV"
+            tag=${{ inputs.ImagePrefix }}-"$timestamp"-"$GITHUB_SHA"
           else
             pull_number=$(jq -r .pull_request.number "$GITHUB_EVENT_PATH")
             echo "tag=pr-$pull_number-"$timestamp"-$GITHUB_SHA" >> "$GITHUB_ENV"
